--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint-lib": "ng lint AngularMyDatePicker",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
