PE-7819 build test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "datepicker",
     "date range picker"
   ],
-  "author": "kekeh",
+  "author": "baxter",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -40,9 +40,9 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.4",
     "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "^11.0.4",
+    "@angular-devkit/build-angular": "^0.1100.4",
+    "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
