--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
@@ -53,7 +53,7 @@
     "fs-extra": "^8.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.2.3",
+    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
@@ -62,7 +62,8 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tsickle": "~0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.2.2"
   }
 }
